Fri Apr 23 23:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCalendarDate.m: Applied bugfixes by Jeremy Bettis
	<jeremy@hksys.com> to better cope with month ends.

Fri Apr 23 15:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: Improved localisation - avoid possibility of
	recursion problems if an error occurs reading localisation info.
	* Source/NSDate.m: Added classes for distant past and distant future.

1999-04-22  Adam Fedor  <fedor@gnu.org>

	* configure.in: Don't abort if nested functions don't work. Not
	sure we even have any.

	* Source/NSBundle.m (-localizedStringForKey:value:table:): Log a
	message if no localized key found (per OpenStep specs).
	* Source/include/NSBundle.h
	(NSLocalizedStringFromTableInFramework): New GNUstep specific
	macro.

	* NSCharacterSets/GNUmakefile: Install in Resources rather than
	Resources/gnustep. 
	* NSTimeZones/GNUmakefile: Likewise.
	* Source/NSCharacterSet.m: Look in new location.
	* Source/NSTimeZone.m: Likewise.
	
Thu Apr 22 21:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: Improved localisation - added stuff for internal
	use by the GNUstep system.
	* Source/NSBundle.h: ditto.
	* Source/FastArray.x: Removed assertions for performance.

Thu Apr 22 11:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSRunLoop.m: Optimisation and tidyup.
        * Source/NSTimer.m: Minor bugfixes.
        * Source/include/FastArray.x: Bugfix for array insertion.
        * Source/include/NSRunLoop.h: Remove limit ivar.
        * Source/include/NSTimer.h: Use NSDate again.

Wed Apr 21 20:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Tidied.
	* Source/Source/NSAutoreleasePool.m: Thread exit code added
	* Source/NSCalendarDate.m: Tidied
	* Source/NSConnection.m: ditto
	* Source/NSException.m: Tidied and added description